[package]
name = "ledify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
sha2 = "0.10.7"
base64 = "0.21.2"
querystring = "1.1.0"
open = "5.0.0"
serde_url_params = "0.2.1"
serialport = "4.2.1"
